--- a/src/EventStore.Examples.AdvancedRead.Console/EventStore.Examples.AdvancedRead.Console.csproj
+++ b/src/EventStore.Examples.AdvancedRead.Console/EventStore.Examples.AdvancedRead.Console.csproj
@@ -2,15 +2,12 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <TargetFramework>netcoreapp2.2</TargetFramework>
     <LangVersion>7.2</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="EventStore.ClientAPI.NetCore" Version="4.1.0.23" />
+    <PackageReference Include="EventStore.Client" Version="5.0.2" />
   </ItemGroup>
 
   <ItemGroup>
