--- a/src/EventStore.Examples.Append.Console/EventStore.Examples.Append.Console.csproj
+++ b/src/EventStore.Examples.Append.Console/EventStore.Examples.Append.Console.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="EventStore.Client" Version="5.0.2" />
+    <PackageReference Include="Serilog" Version="2.9.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
   </ItemGroup>
 
 </Project>
