--- a/src/EventStore.Examples.Infrastructure/EventStore.Examples.Infrastructure.csproj
+++ b/src/EventStore.Examples.Infrastructure/EventStore.Examples.Infrastructure.csproj
@@ -7,6 +7,8 @@
   <ItemGroup>
     <PackageReference Include="EventStore.Client" Version="5.0.2" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+    <PackageReference Include="Serilog" Version="2.9.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
   </ItemGroup>
 
 </Project>
