Added subscription demo

--- a/docker/es6-cluster-with-readonly-replica/docker-compose.yml
+++ b/docker/es6-cluster-with-readonly-replica/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.5"
 
 services:
 
-  eventstore1:
+  esdb-primary-node-1:
    image: eventstore/eventstore:20.10.0-buster-slim
    env_file:
      - common-variables.env
@@ -24,7 +24,7 @@ services:
      clusternetwork:
        ipv4_address: 172.16.0.11
        
-  eventstore2:
+  esdb-primary-node-2:
    image: eventstore/eventstore:20.10.0-buster-slim
    env_file:
      - common-variables.env
@@ -46,7 +46,7 @@ services:
      clusternetwork:
        ipv4_address: 172.16.0.12
    
-  eventstore3:
+  esdb-primary-node-3:
    image: eventstore/eventstore:20.10.0-buster-slim
    env_file:
      - common-variables.env
@@ -54,6 +54,7 @@ services:
      - EVENTSTORE_GOSSIP_SEED=172.16.0.11:2113,172.16.0.13:2113
      - EVENTSTORE_NODE_PRIORITY=1
      - EVENTSTORE_INT_IP=172.16.0.13
+     - EVENTSTORE_ADVERTISE_HOST_TO_CLIENT_AS=127.0.0.1
      - EVENTSTORE_ADVERTISE_HTTP_PORT_TO_CLIENT_AS=2133
      - EVENTSTORE_ADVERTISE_TCP_PORT_TO_CLIENT_AS=1133
    ports:
@@ -63,10 +64,32 @@ services:
   #    - "~/Data/eventstore3node/node3:/var/lib/eventstore"
       - "./certificates/ca:/opt/eventstore/ca"
       - "./certificates/server:/opt/eventstore/cert"
-   restart: unless-stopped
+   restart: always
    networks:
      clusternetwork:
        ipv4_address: 172.16.0.13
+
+  esdb-replica-node-1:
+   image: eventstore/eventstore:20.10.0-buster-slim
+   env_file:
+     - common-variables.env
+   environment:
+     - EVENTSTORE_GOSSIP_SEED=172.16.0.11:2113,172.16.0.13:2113
+     - EVENTSTORE_INT_IP=172.16.0.14
+     - EVENTSTORE_READ_ONLY_REPLICA=true
+     - EVENTSTORE_ADVERTISE_HTTP_PORT_TO_CLIENT_AS=2143
+     - EVENTSTORE_ADVERTISE_TCP_PORT_TO_CLIENT_AS=1143
+   ports:
+     - 1143:1113
+     - 2143:2113
+   volumes:
+  #    - "~/Data/eventstore4node/node4:/var/lib/eventstore"
+      - "./certificates/ca:/opt/eventstore/ca"
+      - "./certificates/server:/opt/eventstore/cert"
+   restart: unless-stopped
+   networks:
+     clusternetwork:
+       ipv4_address: 172.16.0.14
 
 networks:
   clusternetwork:
