--- a/src/common/Domain/Domain.csproj
+++ b/src/common/Domain/Domain.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Library</OutputType>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>EventStore.Examples.Domain</RootNamespace>
   </PropertyGroup>
 
