--- a/src/esdb5/Subscriptions.Console/Subscriptions.Console.csproj
+++ b/src/esdb5/Subscriptions.Console/Subscriptions.Console.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>EventStore.Examples.Subscriptions.Console</RootNamespace>
   </PropertyGroup>
 
