--- a/src/esdb5/TestData.ESdb5.Console/TestData.ESdb5.Console.csproj
+++ b/src/esdb5/TestData.ESdb5.Console/TestData.ESdb5.Console.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>EventStore.Examples.TestData.ESdb5.Console</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
