--- a/docker/es5-cluster/common-variables.env
+++ b/docker/es5-cluster/common-variables.env
@@ -5,6 +5,6 @@ EVENTSTORE_RUN_PROJECTIONS=All
 
 EVENTSTORE_DISCOVER_VIA_DNS=false
 
-#EVENTSTORE_GOSSIP_TIMEOUT_MS=2500
-#EVENTSTORE_INT_TCP_HEARTBEAT_INTERVAL=1000
-#VENTSTORE_INT_TCP_HEARTBEAT_TIMEOUT=2000
+EVENTSTORE_GOSSIP_TIMEOUT_MS=2500
+EVENTSTORE_INT_TCP_HEARTBEAT_INTERVAL=1000
+EVENTSTORE_INT_TCP_HEARTBEAT_TIMEOUT=2000
